New in master
=============

Features
--------

* Added ``post-(type)`` class to ``story.tmpl`` (uses the ``type``
  meta field, defaults to ``post-text`` — same behavior as posts)
* Added ``compiled`` signal after post is compiled (Issue #2369)

Bugfixes
--------

* Use ``en_US`` dictionary name with pyphen for better compatibility
* Fix graceful degradation if ``pyphen`` lacks dictionaries
* Add horizontal scrollbar to listings (via getnikola/nikola-themes#86)
* Copy files when importing two-file posts instead of reading and
  writing (useful for binary formats, eg. docx) (Issue #2380)
* Using correct category titles for category hierarchies
  (Issue #2384)

New in v7.7.9
=============

(1000+ stars on GitHub — thanks!)

Features
--------

* New ``sc`` or ``html`` reST role, which passes content unaltered (Issue #1854)
* Point the user to our users site after 1st successful deploy (Issue #2096)
* Option to disable color output using ``NIKOLA_MONO`` environment
  variable (Issue #2360)
* Improved locale detection in Windows (Issue #2343)
* Added ``enclosure_length`` meta field for better interop (Issue #2338)
* New Lithuanian translation by Antanas Lasys

Bugfixes
--------

* Avoid conflicts caused by multiple copies of the same plugin (#2362)
* Fix handling of some wordpress dumps (Issue #2340)
* When using the plugin command, load ALL plugins (Issue #2359)
* Fix plugin removal for plugins that are a package (Issue #2356)
* Reload English messages for every theme to prevent caching (Issue #2347)
* Cache theme messages after loading once (Issue #2344)
* Add ``<link>`` tags to other languages even if the post is
  untranslated (Google complained otherwise)
* Don't call sys.exit() from plugins if possible (Issue #1839)
* Create Persistor directories only if site is configured (Issue #2334)
* Remove newlines in imported WordPress titles (Issue #2330)

New in v7.7.8
=============

Features
--------
